# ECS-Engine

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
assets/configs/: config.txt
src/: Vec2.h
src/components/: CBBox.h  CName.h  CShape.h  CSprite.h  CTransform.h
src/entities/: Entity.h
src/systems/: systems.h
